--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,18 @@
 astroid==1.5.3
+certifi==2017.7.27.1
+chardet==3.0.4
+idna==2.6
 isort==4.2.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+pkginfo==1.4.1
 py==1.4.34
 pylint==1.7.2
 pytest==3.2.1
+requests==2.18.4
+requests-toolbelt==0.8.0
 six==1.10.0
+tqdm==4.15.0
+twine==1.9.1
+urllib3==1.22
 wrapt==1.10.11
