--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
+[bdist_wheel]
+universal = 1
+
 [aliases]
 test=pytest
 
 [tool:pytest]
 addopts = --verbose
 python_files = tests/*.py
-
-[metadata]
-description-file = README.rst
