--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,24 +1,29 @@
 astroid==1.5.3
+bleach==3.1.0
 certifi==2017.7.27.1
 chardet==3.0.4
 Click==7.0
+docutils==0.14
 dparse==0.4.1
 idna==2.6
 isort==4.2.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 packaging==19.0
-pkginfo==1.4.1
+pkginfo==1.5.0.1
 py==1.4.34
+Pygments==2.4.2
 pylint==1.7.2
 pyparsing==2.4.0
 pytest==3.2.1
 PyYAML==5.1.1
+readme-renderer==24.0
 requests==2.22.0
 requests-toolbelt==0.8.0
 safety==1.8.5
 six==1.10.0
 tqdm==4.15.0
-twine==1.9.1
+twine==1.13.0
 urllib3==1.25.3
+webencodings==0.5.1
 wrapt==1.10.11
